plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.springframework.boot' version '2.4.1'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
}

group 'pl.edu.agh.diskstalker'
version '1.0'

apply plugin: 'org.openjfx.javafxplugin'

repositories {
    mavenCentral()
    maven {
        url "https://dl.bintray.com/speljohan/rxjavafx-mirror"
    }
    jcenter()
}

test {
    useJUnitPlatform()
}

application {
    mainClassName = 'org.agh.diskstalker.DiskStalkerMain'
}

java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

javafx {
    version = '14'
    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.swing', 'javafx.web']
}

dependencies {
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
    testImplementation "org.mockito:mockito-core:2.+"
    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.projectlombok:lombok:1.18.16'

    testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'

    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.0'


    implementation group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.7'
    implementation group: 'io.reactivex.rxjava3', name: 'rxjavafx', version: '3.0.1'

    implementation group: 'org.apache.tika', name: 'tika-core', version: '1.4'
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'net.rgielen:javafx-weaver-spring:1.3.0'

    implementation 'org.projectlombok:lombok:1.18.16'
    
    annotationProcessor 'org.projectlombok:lombok:1.18.16'
}
